--- a/app/src/main/res/layout/activity_messages_list.xml
+++ b/app/src/main/res/layout/activity_messages_list.xml
@@ -14,11 +14,10 @@
         android:layout_alignParentStart="true"
         android:background="@drawable/friend2" />
 
-    <ListView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/messagesListView"
-        android:layout_centerHorizontal="true"
-        android:textAlignment="center"
-        android:touchscreenBlocksFocus="false" />
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/recyclerView"/>
+
+
 </RelativeLayout>
