--- a/app/src/main/res/layout/message_list_item.xml
+++ b/app/src/main/res/layout/message_list_item.xml
@@ -24,7 +24,8 @@
             android:text="category"
             android:layout_below="@+id/messageNameTextView"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"/>
+            android:layout_alignParentStart="true"
+            android:id="@+id/categoryTextView" />
 
         <RelativeLayout
             android:layout_width="match_parent"
